fix: make footer visible

--- a/style/style.css
+++ b/style/style.css
@@ -71,3 +71,12 @@ h3 {
     font-family: 'Noto Sans', sans-serif;
     font-size: 20px;
 }
+
+footer {
+    margin-top: 30px;
+    margin-left: 100px;
+
+    font-family: 'Unbounded', cursive;
+    font-size: 15px;
+    color: #777;
+}
